[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinov2-retrieval"
version = "0.0.2"
authors = [
  { name="Yunfeng Wang", email="wyf.brz@gmail.com" },
]
description = "A cli program of image retrieval using dinov2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"appdirs",
"loguru",
"numpy",
"pillow",
"torch",
"torchvision",
"tqdm",
]

[project.scripts]
dinov2_retrieval="dinov2_retrieval.__init__:main"

[project.urls]
"Homepage" = "https://github.com/vra/dinov2-retrieval"
"Bug Tracker" = "https://github.com/vra/dinov2-retrieval/issues"
